Fix hover overflow issue on guitar page

--- a/css/guitar.css
+++ b/css/guitar.css
@@ -37,7 +37,7 @@ body {
     padding: 0;
 
     list-style: none;
-    font-size: 24px;
+    font-size: 22px;
 
     text-decoration: underline;
 }
@@ -48,7 +48,7 @@ body {
 }
 
 .guitar-list li:hover {
-    font-size: 32px;
+    font-size: 24px;
     font-weight: bold;
     user-select: none;
 }
